parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> expression
Rule 1     expression -> expression PLUS term
Rule 2     expression -> expression MINUS term
Rule 3     expression -> term
Rule 4     term -> term TIMES factor
Rule 5     term -> term DIVIDE factor
Rule 6     term -> factor
Rule 7     factor -> NUMBER
Rule 8     factor -> LPAREN expression RPAREN
Rule 9     factor -> SIN LPAREN expression RPAREN
Rule 10    factor -> COS LPAREN expression RPAREN
Rule 11    factor -> TAN LPAREN expression RPAREN
Rule 12    factor -> LN LPAREN expression RPAREN
Rule 13    factor -> LOG LPAREN expression RPAREN
Rule 14    factor -> EXP LPAREN expression RPAREN

Terminals, with rules where they appear

COS                  : 10
DIVIDE               : 5
EXP                  : 14
LN                   : 12
LOG                  : 13
LPAREN               : 8 9 10 11 12 13 14
MINUS                : 2
NUMBER               : 7
PLUS                 : 1
RPAREN               : 8 9 10 11 12 13 14
SIN                  : 9
TAN                  : 11
TIMES                : 4
error                : 

Nonterminals, with rules where they appear

expression           : 1 2 8 9 10 11 12 13 14 0
factor               : 4 5 6
term                 : 1 2 3 4 5

Parsing method: LALR

state 0

    (0) S' -> . expression
    (1) expression -> . expression PLUS term
    (2) expression -> . expression MINUS term
    (3) expression -> . term
    (4) term -> . term TIMES factor
    (5) term -> . term DIVIDE factor
    (6) term -> . factor
    (7) factor -> . NUMBER
    (8) factor -> . LPAREN expression RPAREN
    (9) factor -> . SIN LPAREN expression RPAREN
    (10) factor -> . COS LPAREN expression RPAREN
    (11) factor -> . TAN LPAREN expression RPAREN
    (12) factor -> . LN LPAREN expression RPAREN
    (13) factor -> . LOG LPAREN expression RPAREN
    (14) factor -> . EXP LPAREN expression RPAREN

    NUMBER          shift and go to state 4
    LPAREN          shift and go to state 5
    SIN             shift and go to state 6
    COS             shift and go to state 7
    TAN             shift and go to state 8
    LN              shift and go to state 9
    LOG             shift and go to state 10
    EXP             shift and go to state 11

    expression                     shift and go to state 1
    term                           shift and go to state 2
    factor                         shift and go to state 3

state 1

    (0) S' -> expression .
    (1) expression -> expression . PLUS term
    (2) expression -> expression . MINUS term

    PLUS            shift and go to state 12
    MINUS           shift and go to state 13


state 2

    (3) expression -> term .
    (4) term -> term . TIMES factor
    (5) term -> term . DIVIDE factor

    PLUS            reduce using rule 3 (expression -> term .)
    MINUS           reduce using rule 3 (expression -> term .)
    $end            reduce using rule 3 (expression -> term .)
    RPAREN          reduce using rule 3 (expression -> term .)
    TIMES           shift and go to state 14
    DIVIDE          shift and go to state 15


state 3

    (6) term -> factor .

    TIMES           reduce using rule 6 (term -> factor .)
    DIVIDE          reduce using rule 6 (term -> factor .)
    PLUS            reduce using rule 6 (term -> factor .)
    MINUS           reduce using rule 6 (term -> factor .)
    $end            reduce using rule 6 (term -> factor .)
    RPAREN          reduce using rule 6 (term -> factor .)


state 4

    (7) factor -> NUMBER .

    TIMES           reduce using rule 7 (factor -> NUMBER .)
    DIVIDE          reduce using rule 7 (factor -> NUMBER .)
    PLUS            reduce using rule 7 (factor -> NUMBER .)
    MINUS           reduce using rule 7 (factor -> NUMBER .)
    $end            reduce using rule 7 (factor -> NUMBER .)
    RPAREN          reduce using rule 7 (factor -> NUMBER .)


state 5

    (8) factor -> LPAREN . expression RPAREN
    (1) expression -> . expression PLUS term
    (2) expression -> . expression MINUS term
    (3) expression -> . term
    (4) term -> . term TIMES factor
    (5) term -> . term DIVIDE factor
    (6) term -> . factor
    (7) factor -> . NUMBER
    (8) factor -> . LPAREN expression RPAREN
    (9) factor -> . SIN LPAREN expression RPAREN
    (10) factor -> . COS LPAREN expression RPAREN
    (11) factor -> . TAN LPAREN expression RPAREN
    (12) factor -> . LN LPAREN expression RPAREN
    (13) factor -> . LOG LPAREN expression RPAREN
    (14) factor -> . EXP LPAREN expression RPAREN

    NUMBER          shift and go to state 4
    LPAREN          shift and go to state 5
    SIN             shift and go to state 6
    COS             shift and go to state 7
    TAN             shift and go to state 8
    LN              shift and go to state 9
    LOG             shift and go to state 10
    EXP             shift and go to state 11

    expression                     shift and go to state 16
    term                           shift and go to state 2
    factor                         shift and go to state 3

state 6

    (9) factor -> SIN . LPAREN expression RPAREN

    LPAREN          shift and go to state 17


state 7

    (10) factor -> COS . LPAREN expression RPAREN

    LPAREN          shift and go to state 18


state 8

    (11) factor -> TAN . LPAREN expression RPAREN

    LPAREN          shift and go to state 19


state 9

    (12) factor -> LN . LPAREN expression RPAREN

    LPAREN          shift and go to state 20


state 10

    (13) factor -> LOG . LPAREN expression RPAREN

    LPAREN          shift and go to state 21


state 11

    (14) factor -> EXP . LPAREN expression RPAREN

    LPAREN          shift and go to state 22


state 12

    (1) expression -> expression PLUS . term
    (4) term -> . term TIMES factor
    (5) term -> . term DIVIDE factor
    (6) term -> . factor
    (7) factor -> . NUMBER
    (8) factor -> . LPAREN expression RPAREN
    (9) factor -> . SIN LPAREN expression RPAREN
    (10) factor -> . COS LPAREN expression RPAREN
    (11) factor -> . TAN LPAREN expression RPAREN
    (12) factor -> . LN LPAREN expression RPAREN
    (13) factor -> . LOG LPAREN expression RPAREN
    (14) factor -> . EXP LPAREN expression RPAREN

    NUMBER          shift and go to state 4
    LPAREN          shift and go to state 5
    SIN             shift and go to state 6
    COS             shift and go to state 7
    TAN             shift and go to state 8
    LN              shift and go to state 9
    LOG             shift and go to state 10
    EXP             shift and go to state 11

    term                           shift and go to state 23
    factor                         shift and go to state 3

state 13

    (2) expression -> expression MINUS . term
    (4) term -> . term TIMES factor
    (5) term -> . term DIVIDE factor
    (6) term -> . factor
    (7) factor -> . NUMBER
    (8) factor -> . LPAREN expression RPAREN
    (9) factor -> . SIN LPAREN expression RPAREN
    (10) factor -> . COS LPAREN expression RPAREN
    (11) factor -> . TAN LPAREN expression RPAREN
    (12) factor -> . LN LPAREN expression RPAREN
    (13) factor -> . LOG LPAREN expression RPAREN
    (14) factor -> . EXP LPAREN expression RPAREN

    NUMBER          shift and go to state 4
    LPAREN          shift and go to state 5
    SIN             shift and go to state 6
    COS             shift and go to state 7
    TAN             shift and go to state 8
    LN              shift and go to state 9
    LOG             shift and go to state 10
    EXP             shift and go to state 11

    term                           shift and go to state 24
    factor                         shift and go to state 3

state 14

    (4) term -> term TIMES . factor
    (7) factor -> . NUMBER
    (8) factor -> . LPAREN expression RPAREN
    (9) factor -> . SIN LPAREN expression RPAREN
    (10) factor -> . COS LPAREN expression RPAREN
    (11) factor -> . TAN LPAREN expression RPAREN
    (12) factor -> . LN LPAREN expression RPAREN
    (13) factor -> . LOG LPAREN expression RPAREN
    (14) factor -> . EXP LPAREN expression RPAREN

    NUMBER          shift and go to state 4
    LPAREN          shift and go to state 5
    SIN             shift and go to state 6
    COS             shift and go to state 7
    TAN             shift and go to state 8
    LN              shift and go to state 9
    LOG             shift and go to state 10
    EXP             shift and go to state 11

    factor                         shift and go to state 25

state 15

    (5) term -> term DIVIDE . factor
    (7) factor -> . NUMBER
    (8) factor -> . LPAREN expression RPAREN
    (9) factor -> . SIN LPAREN expression RPAREN
    (10) factor -> . COS LPAREN expression RPAREN
    (11) factor -> . TAN LPAREN expression RPAREN
    (12) factor -> . LN LPAREN expression RPAREN
    (13) factor -> . LOG LPAREN expression RPAREN
    (14) factor -> . EXP LPAREN expression RPAREN

    NUMBER          shift and go to state 4
    LPAREN          shift and go to state 5
    SIN             shift and go to state 6
    COS             shift and go to state 7
    TAN             shift and go to state 8
    LN              shift and go to state 9
    LOG             shift and go to state 10
    EXP             shift and go to state 11

    factor                         shift and go to state 26

state 16

    (8) factor -> LPAREN expression . RPAREN
    (1) expression -> expression . PLUS term
    (2) expression -> expression . MINUS term

    RPAREN          shift and go to state 27
    PLUS            shift and go to state 12
    MINUS           shift and go to state 13


state 17

    (9) factor -> SIN LPAREN . expression RPAREN
    (1) expression -> . expression PLUS term
    (2) expression -> . expression MINUS term
    (3) expression -> . term
    (4) term -> . term TIMES factor
    (5) term -> . term DIVIDE factor
    (6) term -> . factor
    (7) factor -> . NUMBER
    (8) factor -> . LPAREN expression RPAREN
    (9) factor -> . SIN LPAREN expression RPAREN
    (10) factor -> . COS LPAREN expression RPAREN
    (11) factor -> . TAN LPAREN expression RPAREN
    (12) factor -> . LN LPAREN expression RPAREN
    (13) factor -> . LOG LPAREN expression RPAREN
    (14) factor -> . EXP LPAREN expression RPAREN

    NUMBER          shift and go to state 4
    LPAREN          shift and go to state 5
    SIN             shift and go to state 6
    COS             shift and go to state 7
    TAN             shift and go to state 8
    LN              shift and go to state 9
    LOG             shift and go to state 10
    EXP             shift and go to state 11

    expression                     shift and go to state 28
    term                           shift and go to state 2
    factor                         shift and go to state 3

state 18

    (10) factor -> COS LPAREN . expression RPAREN
    (1) expression -> . expression PLUS term
    (2) expression -> . expression MINUS term
    (3) expression -> . term
    (4) term -> . term TIMES factor
    (5) term -> . term DIVIDE factor
    (6) term -> . factor
    (7) factor -> . NUMBER
    (8) factor -> . LPAREN expression RPAREN
    (9) factor -> . SIN LPAREN expression RPAREN
    (10) factor -> . COS LPAREN expression RPAREN
    (11) factor -> . TAN LPAREN expression RPAREN
    (12) factor -> . LN LPAREN expression RPAREN
    (13) factor -> . LOG LPAREN expression RPAREN
    (14) factor -> . EXP LPAREN expression RPAREN

    NUMBER          shift and go to state 4
    LPAREN          shift and go to state 5
    SIN             shift and go to state 6
    COS             shift and go to state 7
    TAN             shift and go to state 8
    LN              shift and go to state 9
    LOG             shift and go to state 10
    EXP             shift and go to state 11

    expression                     shift and go to state 29
    term                           shift and go to state 2
    factor                         shift and go to state 3

state 19

    (11) factor -> TAN LPAREN . expression RPAREN
    (1) expression -> . expression PLUS term
    (2) expression -> . expression MINUS term
    (3) expression -> . term
    (4) term -> . term TIMES factor
    (5) term -> . term DIVIDE factor
    (6) term -> . factor
    (7) factor -> . NUMBER
    (8) factor -> . LPAREN expression RPAREN
    (9) factor -> . SIN LPAREN expression RPAREN
    (10) factor -> . COS LPAREN expression RPAREN
    (11) factor -> . TAN LPAREN expression RPAREN
    (12) factor -> . LN LPAREN expression RPAREN
    (13) factor -> . LOG LPAREN expression RPAREN
    (14) factor -> . EXP LPAREN expression RPAREN

    NUMBER          shift and go to state 4
    LPAREN          shift and go to state 5
    SIN             shift and go to state 6
    COS             shift and go to state 7
    TAN             shift and go to state 8
    LN              shift and go to state 9
    LOG             shift and go to state 10
    EXP             shift and go to state 11

    expression                     shift and go to state 30
    term                           shift and go to state 2
    factor                         shift and go to state 3

state 20

    (12) factor -> LN LPAREN . expression RPAREN
    (1) expression -> . expression PLUS term
    (2) expression -> . expression MINUS term
    (3) expression -> . term
    (4) term -> . term TIMES factor
    (5) term -> . term DIVIDE factor
    (6) term -> . factor
    (7) factor -> . NUMBER
    (8) factor -> . LPAREN expression RPAREN
    (9) factor -> . SIN LPAREN expression RPAREN
    (10) factor -> . COS LPAREN expression RPAREN
    (11) factor -> . TAN LPAREN expression RPAREN
    (12) factor -> . LN LPAREN expression RPAREN
    (13) factor -> . LOG LPAREN expression RPAREN
    (14) factor -> . EXP LPAREN expression RPAREN

    NUMBER          shift and go to state 4
    LPAREN          shift and go to state 5
    SIN             shift and go to state 6
    COS             shift and go to state 7
    TAN             shift and go to state 8
    LN              shift and go to state 9
    LOG             shift and go to state 10
    EXP             shift and go to state 11

    expression                     shift and go to state 31
    term                           shift and go to state 2
    factor                         shift and go to state 3

state 21

    (13) factor -> LOG LPAREN . expression RPAREN
    (1) expression -> . expression PLUS term
    (2) expression -> . expression MINUS term
    (3) expression -> . term
    (4) term -> . term TIMES factor
    (5) term -> . term DIVIDE factor
    (6) term -> . factor
    (7) factor -> . NUMBER
    (8) factor -> . LPAREN expression RPAREN
    (9) factor -> . SIN LPAREN expression RPAREN
    (10) factor -> . COS LPAREN expression RPAREN
    (11) factor -> . TAN LPAREN expression RPAREN
    (12) factor -> . LN LPAREN expression RPAREN
    (13) factor -> . LOG LPAREN expression RPAREN
    (14) factor -> . EXP LPAREN expression RPAREN

    NUMBER          shift and go to state 4
    LPAREN          shift and go to state 5
    SIN             shift and go to state 6
    COS             shift and go to state 7
    TAN             shift and go to state 8
    LN              shift and go to state 9
    LOG             shift and go to state 10
    EXP             shift and go to state 11

    expression                     shift and go to state 32
    term                           shift and go to state 2
    factor                         shift and go to state 3

state 22

    (14) factor -> EXP LPAREN . expression RPAREN
    (1) expression -> . expression PLUS term
    (2) expression -> . expression MINUS term
    (3) expression -> . term
    (4) term -> . term TIMES factor
    (5) term -> . term DIVIDE factor
    (6) term -> . factor
    (7) factor -> . NUMBER
    (8) factor -> . LPAREN expression RPAREN
    (9) factor -> . SIN LPAREN expression RPAREN
    (10) factor -> . COS LPAREN expression RPAREN
    (11) factor -> . TAN LPAREN expression RPAREN
    (12) factor -> . LN LPAREN expression RPAREN
    (13) factor -> . LOG LPAREN expression RPAREN
    (14) factor -> . EXP LPAREN expression RPAREN

    NUMBER          shift and go to state 4
    LPAREN          shift and go to state 5
    SIN             shift and go to state 6
    COS             shift and go to state 7
    TAN             shift and go to state 8
    LN              shift and go to state 9
    LOG             shift and go to state 10
    EXP             shift and go to state 11

    expression                     shift and go to state 33
    term                           shift and go to state 2
    factor                         shift and go to state 3

state 23

    (1) expression -> expression PLUS term .
    (4) term -> term . TIMES factor
    (5) term -> term . DIVIDE factor

    PLUS            reduce using rule 1 (expression -> expression PLUS term .)
    MINUS           reduce using rule 1 (expression -> expression PLUS term .)
    $end            reduce using rule 1 (expression -> expression PLUS term .)
    RPAREN          reduce using rule 1 (expression -> expression PLUS term .)
    TIMES           shift and go to state 14
    DIVIDE          shift and go to state 15


state 24

    (2) expression -> expression MINUS term .
    (4) term -> term . TIMES factor
    (5) term -> term . DIVIDE factor

    PLUS            reduce using rule 2 (expression -> expression MINUS term .)
    MINUS           reduce using rule 2 (expression -> expression MINUS term .)
    $end            reduce using rule 2 (expression -> expression MINUS term .)
    RPAREN          reduce using rule 2 (expression -> expression MINUS term .)
    TIMES           shift and go to state 14
    DIVIDE          shift and go to state 15


state 25

    (4) term -> term TIMES factor .

    TIMES           reduce using rule 4 (term -> term TIMES factor .)
    DIVIDE          reduce using rule 4 (term -> term TIMES factor .)
    PLUS            reduce using rule 4 (term -> term TIMES factor .)
    MINUS           reduce using rule 4 (term -> term TIMES factor .)
    $end            reduce using rule 4 (term -> term TIMES factor .)
    RPAREN          reduce using rule 4 (term -> term TIMES factor .)


state 26

    (5) term -> term DIVIDE factor .

    TIMES           reduce using rule 5 (term -> term DIVIDE factor .)
    DIVIDE          reduce using rule 5 (term -> term DIVIDE factor .)
    PLUS            reduce using rule 5 (term -> term DIVIDE factor .)
    MINUS           reduce using rule 5 (term -> term DIVIDE factor .)
    $end            reduce using rule 5 (term -> term DIVIDE factor .)
    RPAREN          reduce using rule 5 (term -> term DIVIDE factor .)


state 27

    (8) factor -> LPAREN expression RPAREN .

    TIMES           reduce using rule 8 (factor -> LPAREN expression RPAREN .)
    DIVIDE          reduce using rule 8 (factor -> LPAREN expression RPAREN .)
    PLUS            reduce using rule 8 (factor -> LPAREN expression RPAREN .)
    MINUS           reduce using rule 8 (factor -> LPAREN expression RPAREN .)
    $end            reduce using rule 8 (factor -> LPAREN expression RPAREN .)
    RPAREN          reduce using rule 8 (factor -> LPAREN expression RPAREN .)


state 28

    (9) factor -> SIN LPAREN expression . RPAREN
    (1) expression -> expression . PLUS term
    (2) expression -> expression . MINUS term

    RPAREN          shift and go to state 34
    PLUS            shift and go to state 12
    MINUS           shift and go to state 13


state 29

    (10) factor -> COS LPAREN expression . RPAREN
    (1) expression -> expression . PLUS term
    (2) expression -> expression . MINUS term

    RPAREN          shift and go to state 35
    PLUS            shift and go to state 12
    MINUS           shift and go to state 13


state 30

    (11) factor -> TAN LPAREN expression . RPAREN
    (1) expression -> expression . PLUS term
    (2) expression -> expression . MINUS term

    RPAREN          shift and go to state 36
    PLUS            shift and go to state 12
    MINUS           shift and go to state 13


state 31

    (12) factor -> LN LPAREN expression . RPAREN
    (1) expression -> expression . PLUS term
    (2) expression -> expression . MINUS term

    RPAREN          shift and go to state 37
    PLUS            shift and go to state 12
    MINUS           shift and go to state 13


state 32

    (13) factor -> LOG LPAREN expression . RPAREN
    (1) expression -> expression . PLUS term
    (2) expression -> expression . MINUS term

    RPAREN          shift and go to state 38
    PLUS            shift and go to state 12
    MINUS           shift and go to state 13


state 33

    (14) factor -> EXP LPAREN expression . RPAREN
    (1) expression -> expression . PLUS term
    (2) expression -> expression . MINUS term

    RPAREN          shift and go to state 39
    PLUS            shift and go to state 12
    MINUS           shift and go to state 13


state 34

    (9) factor -> SIN LPAREN expression RPAREN .

    TIMES           reduce using rule 9 (factor -> SIN LPAREN expression RPAREN .)
    DIVIDE          reduce using rule 9 (factor -> SIN LPAREN expression RPAREN .)
    PLUS            reduce using rule 9 (factor -> SIN LPAREN expression RPAREN .)
    MINUS           reduce using rule 9 (factor -> SIN LPAREN expression RPAREN .)
    $end            reduce using rule 9 (factor -> SIN LPAREN expression RPAREN .)
    RPAREN          reduce using rule 9 (factor -> SIN LPAREN expression RPAREN .)


state 35

    (10) factor -> COS LPAREN expression RPAREN .

    TIMES           reduce using rule 10 (factor -> COS LPAREN expression RPAREN .)
    DIVIDE          reduce using rule 10 (factor -> COS LPAREN expression RPAREN .)
    PLUS            reduce using rule 10 (factor -> COS LPAREN expression RPAREN .)
    MINUS           reduce using rule 10 (factor -> COS LPAREN expression RPAREN .)
    $end            reduce using rule 10 (factor -> COS LPAREN expression RPAREN .)
    RPAREN          reduce using rule 10 (factor -> COS LPAREN expression RPAREN .)


state 36

    (11) factor -> TAN LPAREN expression RPAREN .

    TIMES           reduce using rule 11 (factor -> TAN LPAREN expression RPAREN .)
    DIVIDE          reduce using rule 11 (factor -> TAN LPAREN expression RPAREN .)
    PLUS            reduce using rule 11 (factor -> TAN LPAREN expression RPAREN .)
    MINUS           reduce using rule 11 (factor -> TAN LPAREN expression RPAREN .)
    $end            reduce using rule 11 (factor -> TAN LPAREN expression RPAREN .)
    RPAREN          reduce using rule 11 (factor -> TAN LPAREN expression RPAREN .)


state 37

    (12) factor -> LN LPAREN expression RPAREN .

    TIMES           reduce using rule 12 (factor -> LN LPAREN expression RPAREN .)
    DIVIDE          reduce using rule 12 (factor -> LN LPAREN expression RPAREN .)
    PLUS            reduce using rule 12 (factor -> LN LPAREN expression RPAREN .)
    MINUS           reduce using rule 12 (factor -> LN LPAREN expression RPAREN .)
    $end            reduce using rule 12 (factor -> LN LPAREN expression RPAREN .)
    RPAREN          reduce using rule 12 (factor -> LN LPAREN expression RPAREN .)


state 38

    (13) factor -> LOG LPAREN expression RPAREN .

    TIMES           reduce using rule 13 (factor -> LOG LPAREN expression RPAREN .)
    DIVIDE          reduce using rule 13 (factor -> LOG LPAREN expression RPAREN .)
    PLUS            reduce using rule 13 (factor -> LOG LPAREN expression RPAREN .)
    MINUS           reduce using rule 13 (factor -> LOG LPAREN expression RPAREN .)
    $end            reduce using rule 13 (factor -> LOG LPAREN expression RPAREN .)
    RPAREN          reduce using rule 13 (factor -> LOG LPAREN expression RPAREN .)


state 39

    (14) factor -> EXP LPAREN expression RPAREN .

    TIMES           reduce using rule 14 (factor -> EXP LPAREN expression RPAREN .)
    DIVIDE          reduce using rule 14 (factor -> EXP LPAREN expression RPAREN .)
    PLUS            reduce using rule 14 (factor -> EXP LPAREN expression RPAREN .)
    MINUS           reduce using rule 14 (factor -> EXP LPAREN expression RPAREN .)
    $end            reduce using rule 14 (factor -> EXP LPAREN expression RPAREN .)
    RPAREN          reduce using rule 14 (factor -> EXP LPAREN expression RPAREN .)

